--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
   margin-top: 20px;
 }
 
-@media (hover: hover) and (pointer: fine) {
+@media (hover: hover) {
   .content-wrapper {
     display: flex;
     flex-direction: column;
@@ -104,7 +104,7 @@ body {
   }
 }
 
-@media (hover: none) and (pointer: coarse) {
+@media (hover: none) {
   .content-wrapper {
     display: flex;
     flex-direction: column;
