--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
   margin-top: 20px;
 }
 
-@media (hover: hover) {
+@media screen and (orientation: landscape) {
   .content-wrapper {
     display: flex;
     flex-direction: column;
@@ -104,7 +104,7 @@ body {
   }
 }
 
-@media (hover: none) {
+@media screen and (orientation: portrait) {
   .content-wrapper {
     display: flex;
     flex-direction: column;
