--- a/styles.css
+++ b/styles.css
@@ -105,13 +105,18 @@ body {
 }
 
 @media screen and (orientation: portrait) {
+  body {
+    display: flex;
+    align-items: flex-end;
+  }
+
   .content-wrapper {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 80%;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 0;
   }
 
