--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ body {
   }
 
   .words-wrapper {
+    position: relative;
     width: 400px;
     height: 500px;
     display: grid;
@@ -97,6 +98,40 @@ body {
     border-radius: 2px;
     width: 28px;
     height: 32px;
+  }
+
+  .info-icon {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 0;
+    left: -50px;
+    cursor: pointer;
+  }
+
+  .info-icon img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .hidden-info {
+    display: none;
+  }
+
+  .show-info {
+    display: block;
+    position: absolute;
+    top: 20px;
+    left: -372px;
+    width: 300px;
+    height: auto;
+    background-color: #f7f7f7;
+  }
+
+  .info {
+    padding: 0 8px;
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    font-size: 16px;
   }
 
   .mobile-letter {
@@ -168,5 +203,9 @@ body {
     border: 1px solid grey;
     border-radius: 2px;
     width: 8%;
+  }
+
+  .info-icon {
+    display: none;
   }
 }
