--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,32 @@ body {
   }
 }
 
+.info-icon img {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+}
+
+.reload-icon img {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+}
+
+.hidden-info {
+  display: none;
+}
+
+.hidden-icon {
+  display: none;
+}
+
+.info {
+  padding: 0 16px;
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  font-size: 16px;
+}
+
 @media screen and (orientation: landscape) {
   .content-wrapper {
     display: flex;
@@ -120,14 +146,9 @@ body {
     position: absolute;
     width: 40px;
     height: 40px;
-    top: 0;
+    top: 14px;
     left: -50px;
     cursor: pointer;
-  }
-
-  .info-icon img {
-    width: 40px;
-    height: 40px;
   }
 
   .reload-icon {
@@ -137,25 +158,6 @@ body {
     top: 60px;
     left: -50px;
     cursor: pointer;
-  }
-
-  .reload-icon img {
-    width: 40px;
-    height: 40px;
-  }
-
-  .hidden-info {
-    display: none;
-  }
-
-  .hidden-icon {
-    display: none;
-  }
-
-  .info {
-    padding: 0 16px;
-    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-    font-size: 16px;
   }
 
   .mobile-letter {
@@ -181,6 +183,7 @@ body {
   }
 
   .words-wrapper {
+    position: relative;
     width: 100%;
     height: 100%;
     display: grid;
@@ -230,14 +233,25 @@ body {
   }
 
   .info-icon {
-    display: none;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 20px;
+    bottom: -50px;
   }
 
   .reload-icon {
-    display: none;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 72px;
+    bottom: -50px;
   }
 
   .info {
-    display: none;
+    top: unset;
+    bottom: -4px;
+    width: calc(100% - 90px);
+    margin: 0 20px;
   }
 }
