--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 0;
+    margin-bottom: 8px;
   }
 
   .words-wrapper {
