--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,10 @@ body {
   .mobile-enter {
     display: none;
   }
+
+  .mobile-letter {
+    display: none;
+  }
 }
 
 @media screen and (orientation: portrait) {
@@ -296,7 +300,7 @@ body {
 
   .mobile-enter {
     position: absolute;
-    width: 60px;
+    width: 64px;
     height: 40px;
     right: 20px;
     bottom: -50px;
