--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,12 @@ body {
   height: 40px;
 }
 
+.enter-icon img {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+}
+
 .hidden-info {
   display: none;
 }
@@ -181,7 +187,7 @@ body {
     cursor: pointer;
   }
 
-  .mobile-enter {
+  .enter-icon {
     display: none;
   }
 
@@ -298,20 +304,12 @@ body {
     font-size: 12px;
   }
 
-  .mobile-enter {
+  .enter-icon {
     position: absolute;
-    width: 64px;
+    width: 40px;
     height: 40px;
     right: 20px;
     bottom: -50px;
-    background-color: #d9d9d9;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    line-height: 20px;
-    justify-content: center;
-    border-radius: 4px;
-    border: 1px solid grey;
   }
 
   .mobile-letter {
