--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
   user-select: none;
 }
 
+p {
+  margin: 4px 0;
+}
+
 .word {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -104,7 +108,7 @@ body {
 }
 
 .info {
-  padding: 0 16px;
+  padding: 4px 16px;
   box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
   font-size: 16px;
   z-index: 1;
@@ -264,13 +268,11 @@ body {
   }
 
   .keyboard {
+    position: relative;
     font-size: 18px;
     margin-top: 16px;
     height: 150px;
     width: 100%;
-    justify-content: center;
-    gap: 2px;
-    position: relative;
   }
 
   .letter-row {
