--- a/styles.css
+++ b/styles.css
@@ -188,6 +188,7 @@ p {
     border-radius: 2px;
     width: 28px;
     height: 32px;
+    cursor: pointer;
   }
 
   .info-icon {
@@ -335,5 +336,6 @@ p {
   .mobile-letter {
     background-color: #919191;
     width: 10%;
+    margin-left: 4px;
   }
 }
