--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,7 @@ p {
     font-size: 18px;
     margin-top: 16px;
     height: 150px;
-    width: 100%;
+    width: calc(100% - 16px);
   }
 
   .letter-row {
