--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+  background: radial-gradient(circle, rgb(210 212 242) 0%, rgba(148, 187, 233, 1) 100%);
   height: 100vh;
   font-family: 'Helvetica', 'Arial', sans-serif;
   font-size: 68px;
@@ -72,6 +72,10 @@ p {
 }
 
 @media (prefers-color-scheme: dark) {
+  body {
+    background: radial-gradient(circle, rgb(153 158 243) 0%, rgb(95 135 183) 100%);
+  }
+
   .semi-correct-char {
     background-color: #cad93f !important;
   }
