--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,10 @@
 
   --info-bg: #f7f7f7;
 
-  --border-char-color: 3px solid var(--bg-char-active) !important;
-  --border-char-default: 1px solid #cfcfcf;
+  --border-char-color: 1.5px solid var(--bg-char-active) !important;
+  --border-char-default: 1.5px solid #cfcfcf;
+  touch-action: pan-x pan-y;
+  height: 100%
 }
 
 body {
@@ -79,7 +81,7 @@ p {
   border-top: var(--border-char-color);
   border-left: var(--border-char-color);
   border-right: var(--border-char-color);
-  border-bottom: 3px solid var(--char-correct-border) !important;
+  border-bottom: 1.5px solid var(--char-correct-border) !important;
 }
 
 .word-active .correct-char {
@@ -87,7 +89,7 @@ p {
   border-top: var(--border-char-color) !important;
   border-left: var(--border-char-color) !important;
   border-right: var(--border-char-color) !important;
-  border-bottom: 3px solid var(--char-correct-border) !important;
+  border-bottom: 1.5px solid var(--char-correct-border) !important;
 }
 
 .semi-correct-char {
@@ -95,12 +97,12 @@ p {
   border-top: var(--border-char-color);
   border-left: var(--border-char-color);
   border-right: var(--border-char-color);
-  border-bottom: 3px solid var(--char-semi-correct-border) !important;
+  border-bottom: 1.5px solid var(--char-semi-correct-border) !important;
 }
 
 .incorrect-char {
   color: var(--char-incorrect-color) !important;
-  border: 3px solid var(--char-incorrect-border) !important;
+  border: 1.5px solid var(--char-incorrect-border) !important;
   animation: shake 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) both;
 }
 
@@ -136,7 +138,7 @@ p {
     border-top: var(--border-char-color);
     border-left: var(--border-char-color);
     border-right: var(--border-char-color);
-    border-bottom: 3px solid var(--char-semi-correct-border) !important;
+    border-bottom: 1.5px solid var(--char-semi-correct-border) !important;
   }
 
   .semi-correct-letter {
@@ -237,22 +239,19 @@ p {
     align-items: center;
     font-size: 70%;
     border-radius: 4px;
-    opacity: 0.4;
     border: var(--border-char-default);
   }
 
   .word-active .char {
     color: var(--char-active-color);
     background-color: var(--bg-char-active);
-    border: 3px solid var(--char-active-border);
-    opacity: 0.8;
+    border: 1.5px solid var(--char-active-border);
   }
 
   .word-filled .char {
     color: var(--char-missed);
     background-color: var(--bg-char-active);
     border: var(--border-char-color);
-    opacity: 0.8;
   }
 
   .keyboard {
@@ -311,81 +310,21 @@ p {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 80%;
     align-items: center;
     justify-content: space-between;
     padding: 0;
-    margin-bottom: 8px;
-  }
-
-  .words-wrapper {
-    position: relative;
-    width: 100%;
-    height: 75%;
-    display: grid;
-    gap: 10px;
-    grid-template-rows: repeat(6, 1fr);
-    max-width: 600px;
-    margin-top: 36px;
-  }
-
-  .word {
-    margin: 0 8px
-  }
-
-  .word .char {
-    background-color: var(--bg-char);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5vh;
-    border-radius: 4px;
-    opacity: 0.4;
-    border: var(--border-char-default);
   }
 
   .word-active .char {
     color: var(--char-active-color);
     background-color: var(--bg-char-active);
-    border: 3px solid var(--char-active-border);
-    opacity: 0.8;
+    border: 1.5px solid var(--char-active-border);
   }
 
   .word-filled .char {
     color: var(--char-missed);
     background-color: var(--bg-char-active);
     border: var(--border-char-color);
-    opacity: 0.8;
-  }
-
-  .keyboard {
-    position: relative;
-    margin-top: 4vh;
-    height: 25%;
-    width: calc(100% - 16px);
-    max-width: 720px;
-  }
-
-  .letter-row {
-    margin-top: 4px;
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
-    height: 30%;
-    justify-content: center;
-    gap: 3px;
-  }
-
-  .letter {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #181818;
-    background-color: #ffffff;
-    box-shadow: 0px 2px 1px 0.2px rgba(0, 0, 0, .2);
-    border-radius: 4px;
-    width: 8%;
-    font-size: 3vmax;
   }
 
   .incorrect-char {
@@ -442,8 +381,154 @@ p {
     text-decoration: underline;
   }
 
-  .backspace-letter {
-    width: 14%;
-    margin-left: 4px;
+  /* ------------- ПОЛЕ ВВОДА ------------- */
+
+  .words-wrapper {
+    position: relative;
+  }
+
+  .word {
+    display: flex;
+    flex-wrap: nowrap;
+    height: auto;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 12px;
+  }
+
+  .word:last-of-type {
+    margin-bottom: 0;
+  }
+
+  .word .char {
+    background-color: var(--bg-char);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: var(--border-char-default);
+  }
+
+  /* ------------- ПОЛЕ ВВОДА ------------- */
+
+  /* ------------- КЛАВИАТУРА ------------- */
+  .keyboard {
+    position: relative;
+    margin-top: 32px;
+  }
+
+  .letter-row {
+    display: flex;
+    flex-wrap: nowrap;
+    height: auto;
+    justify-content: center;
+    gap: 4px;
+    margin-bottom: 8px;
+  }
+
+  .letter-row:last-of-type {
+    margin-bottom: 0;
+  }
+
+  .letter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #181818;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 1px 0.2px rgba(0, 0, 0, .2);
+    border-radius: 4px;
+  }
+
+  #backspace {
+    width: 42px;
+    margin-left: 8px;
+  }
+
+  /* ------------- КЛАВИАТУРА ------------- */
+
+  @media only screen and (max-width: 389px) {
+    .word {
+      gap: 4px;
+      margin-bottom: 8px;
+    }
+
+    .letter-row {
+      gap: 2px
+    }
+
+    .word .char {
+      width: 35px;
+      height: 41px;
+      font-size: 22px;
+    }
+
+    .letter {
+      width: 20px;
+      height: 32px;
+      font-size: 14px;
+    }
+
+    #backspace {
+      width: 28px;
+    }
+  }
+
+  @media only screen and (min-width: 389px) and (max-width: 768px) {
+    .word .char {
+      width: 45px;
+      height: 53px;
+      font-size: 24px;
+    }
+
+    .letter {
+      width: 28px;
+      height: 42px;
+      font-size: 18px;
+    }
+
+    #backspace {
+      width: 54px;
+    }
+  }
+
+  @media only screen and (min-width: 769px) and (max-width: 992px) {
+    .word .char {
+      width: 72px;
+      height: 85px;
+      font-size: 28px;
+    }
+
+    .letter {
+      width: 57px;
+      height: 73px;
+      font-size: 34px;
+    }
+
+    #backspace {
+      width: 85px;
+    }
+  }
+
+  @media only screen and (min-width: 993px) {
+    .word .char {
+      width: 115px;
+      height: 136px;
+      font-size: 46px;
+    }
+
+    .letter {
+      width: 75px;
+      height: 90px;
+      font-size: 40px;
+    }
+
+    #backspace {
+      width: 116px;
+    }
+
+    #backspace img {
+      width: 42%;
+    }
   }
 }
