--- a/styles.css
+++ b/styles.css
@@ -490,6 +490,10 @@ p {
     #backspace {
       width: 54px;
     }
+
+    #backspace img {
+      height: 56%;
+    }
   }
 
   @media only screen and (min-width: 769px) and (max-width: 992px) {
