--- a/styles.css
+++ b/styles.css
@@ -374,9 +374,9 @@ p {
   }
 
   #it-was-word {
-    font-size: 2vh;
-    line-height: 3vh;
-    top: -3vh;
+    font-size: 18px;
+    line-height: 32px;
+    top: -32px;
   }
 
   #again {
