--- a/styles.css
+++ b/styles.css
@@ -379,6 +379,10 @@ p {
     transition: 300ms;
   }
 
+  .result {
+    margin-top: 0;
+  }
+
   #it-was-word {
     font-size: 16px;
   }
@@ -492,6 +496,10 @@ p {
     align-items: center;
   }
 
+  .result-icon {
+    margin-bottom: 8px;
+  }
+
   /* ------------- РЕЗУЛЬТАТЫ ------------- */
 
   @media only screen and (max-width: 358px) {
@@ -542,6 +550,7 @@ p {
 
     .result-icon {
       font-size: 50px;
+      line-height: 50px;
     }
 
     #it-was-word {
@@ -604,6 +613,7 @@ p {
 
     .result-icon {
       font-size: 54px;
+      line-height: 54px;
     }
 
     #it-was-word {
@@ -659,11 +669,13 @@ p {
     }
 
     .result-icon {
-      font-size: 64px;
+      font-size: 72px;
+      line-height: 72px;
     }
 
     #it-was-word {
       font-size: 16px;
+      line-height: 20px;
     }
 
     #start-again {
@@ -717,6 +729,7 @@ p {
 
     .result-icon {
       font-size: 68px;
+      line-height: 68px;
     }
 
     #it-was-word {
@@ -774,6 +787,7 @@ p {
 
     .result-icon {
       font-size: 80px;
+      line-height: 80px;
     }
 
     #it-was-word {
@@ -827,6 +841,7 @@ p {
 
     .result-icon {
       font-size: 104px;
+      line-height: 104px;
     }
 
     #it-was-word {
@@ -884,6 +899,7 @@ p {
 
     .result-icon {
       font-size: 136px;
+      line-height: 136px;
     }
 
     #it-was-word {
